--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Open sourcing this</h1>
     <p>Created a dummy branch</p>
+    <ol>
+        <li>This is first list item</li>
+        <li>This is second list item</li>
+    </ol>
 </body>
 </html>
